# liveTracer

./: CMakeLists.txt  README  Rasterizer.cpp  RayTracer.cpp  Renderer.cpp
libLinear/: GMatrix.h  Matrix.cpp  Matrix.h  Ray.h  Vector.cpp  Vector.h  libLinearTest.cpp  utilMatrix.h
libOGL/: OGLImage.h  liveTrace.h
libObjects/: Camera.h  HitStruct.h  Light.h  Object.h  Quad.h  Sphere.h  Triangle.h  Vertex.h
libObjects/libMaterial/: Shading.h  Texture.h
libOutput/: Image.h  PNGImage.cpp  PNGImage.h
libParser/: Parser.cpp  Parser.h  Scene.cpp  Scene.h
